# gitee-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md
.github/scripts/: bump-homebrew-formula.py
.github/workflows/: ci.yml  release.yml
.out-of-scope/: 28-mcp-server.md
.scratch/cli-update-notice/issues/: 01-gh-update-notifier.md
.scratch/cli-update-notice/research/: gh-update-notifier.md
.scratch/gh-parity/: spec.md
.scratch/gh-parity/issues/: 01-api-passthrough.md  02-json-jq.md  03-pr-edit.md  04-pr-create-parity.md  05-issue-edit.md  06-search-command.md  07-gist-command.md  08-label-command.md  09-milestone-command.md  10-release-ops.md  11-repo-ops.md  12-status-commands.md  13-status-dashboard.md  14-pr-test-update-branch.md  15-browse-web.md  16-config-alias.md  17-auth-setup-git-switch.md  18-ssh-key.md  19-collaborator.md  20-webhook.md  21-org-list.md  22-repo-star-watch.md  23-interactive-prompts.md  24-extension-system.md  25-readme-platform-limits.md
.superpowers/sdd/: progress.md
.workflow/: BranchPipeline.yml  CargoTest.yml
docs/: scripting.md
docs/adr/: 0001-issue-numbers-are-strings.md  0002-operations-modules-own-api-shape.md
src/: cli.rs  config.rs  error.rs  extension.rs  lib.rs  main.rs  models.rs  out.rs  repo.rs  update_notice.rs  web.rs
src/api/: client.rs  collaborators.rs  gists.rs  issues.rs  labels.rs  milestones.rs  mod.rs  pulls.rs  releases.rs  repos.rs  search.rs  users.rs  webhooks.rs
src/cmd/: alias.rs  api.rs  auth.rs  browse.rs  collaborator.rs  config_cmd.rs  extension.rs  gist.rs  interactive.rs  issue.rs  label.rs  milestone.rs  mod.rs  org.rs  pr.rs  release.rs  repo.rs  search.rs  ssh_key.rs  status.rs  webhook.rs
tests/: api_passthrough.rs  client_errors.rs  client_paged.rs  fixtures.rs  ops_collaborators.rs  ops_gists.rs  ops_issues.rs  ops_labels.rs  ops_milestones.rs  ops_orgs.rs  ops_pulls.rs  ops_releases.rs  ops_repos.rs  ops_search.rs  ops_ssh_keys.rs  ops_users.rs  ops_webhooks.rs  update_notice_fetch.rs  update_notice_lifecycle.rs
tests/fixtures/: gist.json  issue.json  milestone.json  pr_file_diff.json  pull_request.json  release.json  repo_list.json
