[package]
name = "gitee"
version = "0.1.0"
edition = "2021"
description = "A gh-like command-line client for Gitee"
license = "MIT"
repository = "https://gitee.com/oschina/gitee-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
tabled = "0.16"
url = "2"
keyring = "3"

[dev-dependencies]
mockito = "1"
