[package]
name = "gitee-cli-rs"
version = "0.1.0"
edition = "2021"
description = "A gh-like command-line client for Gitee"
license = "MIT"
repository = "https://github.com/kipyin/gitee-cli"

[[bin]]
name = "gitee"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "gzip", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
tabled = "0.16"
url = "2"
keyring = "3"

[dev-dependencies]
mockito = "1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gitee-{ target }-v{ version }{ archive-suffix }"
pkg-fmt = "txz"
bin-dir = "gitee-{ target }-v{ version }/{ bin }{ binary-ext }"
